# AustraliaJobSeeker-AI

./: .dockerignore  .env  .gitignore  CLOUD_RUN_DEPLOYMENT.md  Dockerfile  FRONTEND_PRODUCTION_GUIDE.md  README.md  cloudbuild.yaml  pyproject.toml  requirements.txt  test.py
A2A/: README.md  agent_executor.py  client.py  main.py
Docker/: .dockerignore  Dockerfile  docker-compose.yml
Langsmith/: __init__.py  integration.py
MCP/MCP_client/: README.md  main.py  pyproject.toml
MCP/MCP_server/: main.py
MCP/MCP_servers/: main.py
agents/: cover_letter_agent.py  job_enrichment_agent.py  langgraph_supervisor.py  profile_agent.py  ranking_agent.py  resume_agent.py  router_agent.py  supervisor_agent.py  supervisor_graph.py  visa_agent.py
api/: main.py
data/: generated_cover_letter.txt  generated_resume.txt  sample_resume.txt  visa_rules.txt
frontend/: Dockerfile  app.py
kubernetes/: README.md  app-deployment.yaml  app-service.yaml  configmap.yaml  deploy.sh  frontend-deployment.yaml  frontend-service.yaml  ingress.yaml  namespace.yaml  ollama-deployment.yaml  ollama-service.yaml  pvc.yaml
models/: schemas.py
models/__pycache__/: schemas.cpython-314.pyc.2733698468816
tests/: test_chroma_invoke.py  test_cover_letter_agent.py  test_job_details.py  test_job_enrichment.py  test_langgraph.py  test_langgraph_supervisor.py  test_pipeline.py  test_profile_agent.py  test_ranking_agent.py  test_resume_agent.py  test_router_agent.py  test_scraper.py  test_supervisor.py  test_visa_agent.py
tools/: job_details_scraper.py  seek_scraper.py
