[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "australiajobseeker-ai"
version = "0.1.0"
description = "Australia Job Seeker AI - AI-powered job search and application assistant"
requires-python = ">=3.10"
dependencies = [
    "a2a-sdk==0.3.0",
    "fastapi>=0.100.0",
    "fastmcp>=0.1.0",
    "langchain>=1.3.2",
    "langchain-community>=0.1.0",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-groq>=0.1.0",
    "langgraph>=0.1.0",
    "langsmith>=0.1.0",
    "playwright>=1.40.0",
    "pydantic>=2.0.0",
    "pypdf>=3.0.0",
    "python-docx>=0.8.11",
    "python-dotenv>=1.2.2",
    "requests>=2.31.0",
    "sse-starlette>=3.4.4",
    "starlette>=0.27.0",
    "streamlit>=1.58.0",
    "uvicorn>=0.48.0",
    "httpx>=0.24.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["agents*", "tools*"]

[tool.uv.workspace]
members = [
    "MCP/MCP_client",
]